--- a/templates/rain.html
+++ b/templates/rain.html
@@ -51,8 +51,8 @@
 </div>
 <input type="submit">
 <h3>The current program is:</h3>
-<p>Zone 1: Run on days: {{ savedDaysTem1 }}.  Start at: {{ savedStartTimeTem1 }} End at: {{ savedEndTimeTem1 }}</p>
-<p>Zone 2: Run on days: {{ savedDaysTem2 }}.  Start at: {{ savedStartTimeTem2 }} End at: {{ savedEndTimeTem2 }}</p>
+<p>Zone 1: Run on days: {{ savedDaysTem1 }}.  Start at: {{ savedStartTimeTem1 }} Runtime (s): {{ savedRuntimeTem1 }}</p>
+<p>Zone 2: Run on days: {{ savedDaysTem2 }}.  Start at: {{ savedStartTimeTem2 }} Runtime (s): {{ savedRuntimeTem2 }}</p>
 <p>System time is (24 hour format): {{ datetime }}</p>
 <p>If power was lost, system time will be wrong. Correct it by going to /time URL:</p>
 </form>
